# CS_IU_proto_1

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/trained_model/: svmModel.xml  trained2.xml
app/src/main/cpp/: TimberDetector.cpp  TimberDetector.h  native-lib.cpp  native-lib.h  utils.cpp  utils.h
app/src/main/java/recorder/: SnapshotRecorder.java
app/src/main/res/anim/: fade_out.xml
app/src/main/res/drawable/: bg_appcolor_radius.xml  bg_appcolorwhite_radius.xml  border_background.xml  circle.xml  delete_black.xml  for_capture_button.xml  for_record_button.xml  for_stop_button.xml  round_rect_background0.xml  round_rect_background1.xml  round_rect_background2.xml  round_rect_background4.xml  round_rectangle.xml  seek_thumb.xml  seekbar.xml
app/src/main/res/drawable-v24/: border_background2.xml  border_background3.xml  border_background4.xml  border_background5.xml  for_guide_icon.xml  for_measure_icon.xml  for_record_icon.xml  round_rect_background3.xml
app/src/main/res/layout/: activity_guide.xml  activity_main.xml  activity_my_record.xml  activity_result.xml  activity_start_screen.xml  guide_slide1.xml  guide_slide10.xml  guide_slide11.xml  guide_slide12.xml  guide_slide13.xml  guide_slide2.xml  guide_slide3.xml  guide_slide4.xml  guide_slide5.xml  guide_slide6.xml  guide_slide7.xml  guide_slide8.xml  guide_slide9.xml  recyclerview_item.xml  tag_item.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
(+49 files in other folders)
